--- a/18task.css
+++ b/18task.css
@@ -87,5 +87,27 @@ body{
 }
 
 .prg1::after {
-    content: " ★";
+    content: " 😄";
+}
+.inline { display: inline; }
+
+.none { display: none; }
+
+.ib {
+  display: inline-block;
+  width: 100px;
+  border: 1px solid;
+}
+
+.flex { display: flex; gap: 10px; }
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+
+div, span {
+  padding: 5px;
+  border: 1px solid;
 }
